--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
         <form class="search-container" action="/pagina-de-busca" method="get">
             <div class="search-input-container">
                 <img class="search-icon" src="lu.svg" alt="Ícone de busca" />
-                <input type="text" id="busca" name="q" placeholder="Digite sua pesquisa aqui" onkeydown="if(event.key==='Enter'){buscar(); return false;}" />
+                <input type="text" id="busca" name="q" placeholder="Busca" onkeydown="if(event.key==='Enter'){buscar(); return false;}" />
             </div>
         </form>
     </div>
 
     <main>
         <div class="bloco">
-            <img class="icons" src="img/martini-glass-solid.svg" alt="">
+            <img class="icons" src="martini-glass-solid.svg" alt="">
             <p class="menu">Bebidas</p>
         </div>
 
         <div class="bloco">
-            <img  class="icons" src="img/burger-solid.svg" alt="">
+            <img  class="icons" src="burger-solid.svg" alt="">
             <p class="menu">Lanches</p>
         </div>
 
         <div class="bloco">
-            <img class="icons" src="img/cookie-bite-solid.svg" alt="">
+            <img class="icons" src="cookie-bite-solid.svg" alt="">
             <p class="menu">Doces</p>
         </div>
 
