--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="efeitos.css">
 </head>
 <body>
     <header class="header">
@@ -21,21 +22,110 @@
     </div>
 
     <main>
-        <div class="bloco">
-            <img class="icons" src="martini-glass-solid.svg" alt="">
+        <a href="#" class="bloco">
+            <img class="icons" src="imgs/drink.png" alt="">
             <p class="menu">Bebidas</p>
-        </div>
+        </a>
 
-        <div class="bloco">
-            <img  class="icons" src="burger-solid.svg" alt="">
+        <a href="#" class="bloco">
+            <img  class="icons" src="imgs/cheese-burger.png" alt="">
             <p class="menu">Lanches</p>
-        </div>
+        </a>
 
-        <div class="bloco">
-            <img class="icons" src="cookie-bite-solid.svg" alt="">
+        <a href="#" class="bloco">
+            <img class="icons" src="imgs/cupcake.png" alt="">
             <p class="menu">Doces</p>
-        </div>
+        </a>
 
     </main>
+
+    <h1 id="menu-food">Food Menu</h1>
+
+
+
+
+<section id="grid-section">
+    
+    <section class="section-food">
+        <div>
+            <img class="comidas" src="imgs/comida.jpg" alt="">
+        </div>
+
+        <div class="item">
+            <p class="description">Lorem Ipsum</p>
+            <div class="price-container">
+                <p class="price">R$ 100</p>
+                <p class="plus">+</p>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section class="section-food">
+        <div>
+            <img class="comidas" src="imgs/comida.jpg" alt="">
+        </div>
+
+        <div class="item">
+            <p>Lorem enpsi</p>
+            <div class="price-container">
+                <p class="price">R$ 100</p>
+                <p class="plus">+</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-food">
+        <div>
+            <img class="comidas" src="imgs/bolo.jpg" alt="">
+        </div>
+
+        <div class="item">
+            <p>Lorem enpsi</p>
+            <div class="price-container">
+                <p class="price">R$ 100</p>
+                <p class="plus">+</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-food">
+        <div>
+            <img class="comidas" src="imgs/prato.jpg" alt="">
+        </div>
+
+        <div class="item">
+            <p>Lorem enpsi</p>
+            <div class="price-container">
+                <p class="price">R$ 100</p>
+                <p class="plus">+</p>
+            </div>
+        </div>
+    </section>
+
+
+    <section>
+
+    </section>
+</section>
+
+
+
+
+    <footer>
+        <div class="footer">
+            <img class="icons-footer"src="img/house-solid.svg" width="32" height="24"alt="">
+            <p>Home</p>
+        </div>
+        <div class="footer">
+            <img class="icons-footer" src="img/clipboard-list-solid.svg" width="32" height="24"alt="">
+            <p>Pedidos</p>
+        </div>
+        <div class="footer">
+            <img class="icons-footer" src="img/user-solid.svg"width="32" height="24" alt="">
+            <p>Perfil</p>
+        </div>
+    </footer>
 </body>
 </html>
